--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
 {
   "imports": {
     "@google/genai": "https://esm.sh/@google/genai@^1.38.0",
-    "react/": "https://esm.sh/react@^19.2.3/",
-    "react": "https://esm.sh/react@^19.2.3",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "lucide-react": "https://esm.sh/lucide-react@^0.562.0",
-    "date-fns": "https://esm.sh/date-fns@^4.1.0",
-    "uuid": "https://esm.sh/uuid@^13.0.0"
+    "react": "https://esm.sh/react@19.0.0",
+    "react/": "https://esm.sh/react@19.0.0/",
+    "react-dom": "https://esm.sh/react-dom@19.0.0?external=react",
+    "react-dom/": "https://esm.sh/react-dom@19.0.0/",
+    "lucide-react": "https://esm.sh/lucide-react@0.474.0?external=react",
+    "date-fns": "https://esm.sh/date-fns@4.1.0"
   }
 }
 </script>
