--- a/index.html
+++ b/index.html
@@ -23,6 +23,22 @@
         ::-webkit-scrollbar-thumb { background: #cbd5e1; border-radius: 10px; }
         ::-webkit-scrollbar-thumb:hover { background: #94a3b8; }
     </style>
+    <!-- Fail-safe Error Logger -->
+    <script>
+        window.onerror = function(msg, url, lineNo, columnNo, error) {
+            const root = document.getElementById('root');
+            if (root && root.innerHTML === '') {
+                root.innerHTML = `
+                    <div style="padding: 40px; margin: 40px; background: #fff1f2; border: 2px solid #fda4af; border-radius: 20px; color: #9f1239; font-family: sans-serif;">
+                        <h2 style="font-weight: 900;">Critical Boot Error</h2>
+                        <p>The application failed to load a module or encountered a syntax error.</p>
+                        <pre style="background: white; padding: 15px; border-radius: 10px; font-size: 12px; overflow: auto; margin-top: 10px;">${msg}\nAt: ${url}\nLine: ${lineNo}</pre>
+                    </div>
+                `;
+            }
+            return false;
+        };
+    </script>
 <script type="importmap">
 {
   "imports": {
@@ -31,7 +47,7 @@
     "react-dom/client": "https://esm.sh/react-dom@19.0.0/client",
     "lucide-react": "https://esm.sh/lucide-react@0.474.0?external=react",
     "date-fns": "https://esm.sh/date-fns@4.1.0",
-    "@google/genai": "https://esm.sh/@google/genai@^1.38.0",
+    "@google/genai": "https://esm.sh/@google/genai@1.38.0",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
     "react/": "https://esm.sh/react@^19.2.3/"
   }
